<resources>
    <string name="app_name">Chautari Oil Mill</string>
    <string name="oilfield">Oilfield</string>
    <string name="go_to_homepage">Go to Homepage</string>
    <string name="welcome_description">Welcome to Cautari Oil Mill,\n where you can find the best oil for you and your family!</string>
    <string name="are_you_a_seller">Are you a seller?</string>
    <string name="username">Username</string>
    <string name="contact_number">Contact Number</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="phone">Contact Number</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="menu_home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="logout">Logout\n</string>
    <string name="setting">Setting</string>
    <string name="home">Home</string>
    <string name="user_image">User Image</string>
    <string name="register">Register</string>
    <string name="category">Category</string>
    <string name="orders">Orders</string>
    <string name="notifications">Notifications</string>
    <string name="wishlist">Wishlist</string>
    <string name="help_support">Help/Support</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_history">Order History</string>
    <string name="submit">Submit</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="full_address">Full Address</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of Birth (dd/mm/yyyy)</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="kyc_form">KYC Form</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gender">Gender:</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="guest_example_com">guest@example.com</string>
    <string name="guest">Guest</string>
    <string name="howdey_user">Howdey! User</string>
    <string name="back">Go Back</string>
    <string name="born_legend">Born Legend</string>
    <string name="human">Human</string>
    <string name="one_call">I\'m only one call away.</string>
    <string name="since_forever">Since Forever</string>
    <string name="address">Lives in your heart.</string>
    <string name="category_image">Category Image</string>
    <string name="category_name">Category Name</string>
    <string name="product_name">Product Name</string>
    <string name="product_image">Product Image</string>
    <string name="shop_now">Shop Now</string>
    <string name="categories">Categories</string>
    <string name="new_products">New Products</string>
    <string name="popular_products">Popular Products</string>
    <string name="recommendation">Recommendation</string>
    <string name="price">Price</string>
    <string name="prices">Price:</string>
    <string name="description">Description</string>
    <string name="Categories">Categories</string>
    <string name="checkout">Checkout</string>
    <string name="total_price">Total Price:</string>
    <string name="cart_item_name">Cart Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="order_name">Order Name:</string>
    <string name="item_name">Item name:</string>
    <string name="order_date">Order Date:</string>
    <string name="add_product">Add Product</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="remove">Remove</string>

</resources>