<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_margin="8dp"
    android:gravity="center_horizontal"
    android:background="@color/blue_300">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/product_image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_bookmarks" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textColor="@color/black"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/shopNowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_now"
        android:textColor="@color/white" />
</LinearLayout>
