<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_header_home"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/yellow_700"
    android:layout_marginTop="25dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <!-- LinearLayout for user image and back menu button -->
    <LinearLayout
        android:id="@+id/user_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- CardView for user image -->
        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="40dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/user_image"
                android:src="@drawable/chautari" />
        </androidx.cardview.widget.CardView>
        <!-- Spacer -->
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Back menu button -->
        <ImageView
            android:id="@+id/backMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:focusable="true"
            android:src="@drawable/ic_menu_open"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <!-- Username text -->
    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_image_view" />

    <!-- Email text -->
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/email_address"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <!-- Registration Date -->
    <TextView
        android:id="@+id/registration_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/since_forever"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <!-- Edit profile button -->
    <ImageView
        android:id="@+id/editImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:visibility="gone"
        android:contentDescription="@string/edit_profile"
        android:src="@drawable/ic_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/email" />

</androidx.constraintlayout.widget.ConstraintLayout>
