<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/oilfield"
        android:src="@drawable/oilfield7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="Username"
        android:background="@drawable/circular_background"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:elevation="10dp"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_text"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/contactNumberEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Contact Number"
        android:background="@drawable/circular_background"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:inputType="phone"
        android:padding="16dp"
        android:elevation="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/contact_number"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_text"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Email Address"
        android:background="@drawable/circular_background"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:elevation="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email_address"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_text"
        app:layout_constraintTop_toBottomOf="@id/contactNumberEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Password"
        android:background="@drawable/circular_background"
        android:drawableStart="@drawable/ic_passkey_filled"
        android:drawablePadding="10dp"
        android:padding="16dp"
        android:elevation="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_text"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/repeatPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Re-enter Password"
        android:background="@drawable/circular_background"
        android:drawableStart="@drawable/ic_password_filled"
        android:drawablePadding="10dp"
        android:padding="16dp"
        android:elevation="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_text"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/button_text"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/repeatPasswordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textColor="@color/text"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/signupButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/red_500"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="@id/questionTextView"
        app:layout_constraintBottom_toBottomOf="@id/questionTextView"
        app:layout_constraintStart_toEndOf="@id/questionTextView" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:indeterminateTint="@color/yellow_700"
        app:layout_constraintTop_toBottomOf="@id/loginTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
